appId: xyz.blueskyweb.app
---
- runScript:
    file: ../setupServer.js
    env:
        SERVER_PATH: "?users&follows&thread"
- runFlow:
    file: ../setupApp.yml
- tapOn:
    id: "e2eSignInAlice"


# Navigate to thread
- extendedWaitUntil:
    visible: "Thread root"
- tapOn: "Thread root"
- assertVisible: "Thread reply"

# Can like the root post
- tapOn:
    id: "likeBtn"
    childOf:
        id: "postThreadItem-by-bob.test"
- assertVisible: "1 like"
- tapOn:
    id: "likeBtn"
    childOf:
        id: "postThreadItem-by-bob.test"
- assertNotVisible: "1 like"

# Can like a reply post
- tapOn:
    id: "likeBtn"
    childOf:
        id: "postThreadItem-by-carla.test"
- tapOn:
    id: "likeBtn"
    childOf:
        id: "postThreadItem-by-carla.test"

# Can repost the root post
- tapOn:
    id: "repostBtn"
    childOf:
        id: "postThreadItem-by-bob.test"
- tapOn: "Repost"
- assertVisible:
    id: "repostCount-expanded"
- tapOn:
    id: "repostBtn"
    childOf:
        id: "postThreadItem-by-bob.test"
- tapOn: "Remove repost"
- assertNotVisible:
    id: "repostCount-expanded"


# Can repost a reply post
- tapOn:
    id: "repostBtn"
    childOf:
        id: "postThreadItem-by-carla.test"
- tapOn: "Repost"
- assertVisible:
    id: "repostCount"
    childOf:
        id: "postThreadItem-by-carla.test"
- tapOn:
    id: "repostBtn"
    childOf:
        id: "postThreadItem-by-carla.test"
- tapOn: "Remove repost"
- assertNotVisible:
    id: "repostCount"
    childOf:
        id: "postThreadItem-by-carla.test"
